fix(server/media): update endpoint formatting
